--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "delete": "node dummy/delete.js"
+    "delete": "node dummy/delete.js",
+    "create": "node dummy/create.js"
   },
   "keywords": [],
   "author": "",
