--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.5.0",
     "sweetalert2": "^11.1.4",
     "web-vitals": "^1.1.2"
   },
