--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,27 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/material": "^5.10.6",
+    "@stripe/react-stripe-js": "^1.11.0",
+    "@stripe/stripe-js": "^1.38.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "material-ui-pack": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-number-format": "^5.0.0-beta.5",
+    "react-rangeslider": "^2.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^4.0.5",
     "sweetalert2": "^11.1.4",
     "web-vitals": "^1.1.2"
   },
